syntax = "proto3";

option csharp_namespace = "GrpcClientSampleCLI";

package sample;

service Sample {
  rpc Bind (stream BindRequest) returns (stream BindReply);
}

message BindRequest {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
  double heading = 4;
  double velocity = 5;
  int32 gnss_quality = 6;
  int32 status = 7;
}

message BindReply {
  oneof operation {
    bool run = 1;
    bool auto = 2;
    double speed = 3;
  }
}
